NATTQA-ENV/force-app/main/default/objects/Product2/fields/Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Date__c</fullName>
    <description>Availability Date for the particular product.</description>
    <label>Availability Date</label>
    <type>Date</type>
</CustomField>