NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_Base_Weight__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Base_Weight__c</fullName>
    <description>It is used to store the base weight of the product.</description>
    <inlineHelpText>It is used to store the base weight of the product.</inlineHelpText>
    <label>Base Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>