NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_Cost_Correction_Factor__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Correction_Factor__c</fullName>
    <description>It is used to store the value for cost correction factor.</description>
    <inlineHelpText>It is used to store the value for cost correction factor.</inlineHelpText>
    <label>Cost Correction Factor</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>