NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_JDE_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE_Product_Number__c</fullName>
    <label>JDE Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>