NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Price__c</fullName>
    <description>It is used to store list price of the product.</description>
    <inlineHelpText>It is used to store list price of the product.</inlineHelpText>
    <label>List Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>