NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_LNBaan_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_LNBaan_Product_Number__c</fullName>
    <label>LNBaan Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>