NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Part_Number__c</fullName>
    <formula>NATT_P_N__c</formula>
    <label>CONTAINER Part Number</label>
    <type>Text</type>
</CustomField>