NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_PID_If_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PID_If_Assigned__c</fullName>
    <label>PID (If assigned)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>