NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Line__c</fullName>
    <formula>TEXT( NATT_Product_Line__c )</formula>
    <label>CONTAINER Product Line</label>
    <type>Text</type>
</CustomField>