NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_Product_Source__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Source__c</fullName>
    <description>It is used to select the value of product source.</description>
    <inlineHelpText>It is used to select the value of product source.</inlineHelpText>
    <label>Product Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAO</fullName>
            </value>
            <value>
                <fullName>SNG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>