NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NT</fullName>
                <default>true</default>
                <label>NT</label>
            </value>
            <value>
                <fullName>GENSET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>