NATTQA-ENV/force-app/main/default/objects/Product2/fields/CONTAINER_STD_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_STD_Cost__c</fullName>
    <description>It is used to store the standard cost of the product.</description>
    <inlineHelpText>It is used to store the standard cost of the product.</inlineHelpText>
    <label>STD Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>