NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTBR_ClasseA__c.field-meta.xml
<CustomField>
    <fullName>CTBR_ClasseA__c</fullName>
    <label>ClasseA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>