NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTBR_Installation_Cost__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Installation_Cost__c</fullName>
    <label>Installation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>