NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTBR_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Item_Cost__c</fullName>
    <label>Item Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>