NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTBR_Parent_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Parent_Item_Code__c</fullName>
    <label>Parent Item Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>