NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTBR_Type__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>