NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTBR_Unit__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Unit__c</fullName>
    <label>CTBR Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>