NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTBR_Unit_Product__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Unit_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTBR Unit Product</label>
    <type>Checkbox</type>
</CustomField>