NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTM_Business_Unit_MCU__c.field-meta.xml
<CustomField>
    <fullName>CTM_Business_Unit_MCU__c</fullName>
    <label>Business Unit (MCU)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTM_Business_Unit_MCU</valueSetName>
    </valueSet>
</CustomField>