NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTM_JDE_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CTM_JDE_Product_Type__c</fullName>
    <label>CTM JDE Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Diesel Truck</fullName>
            </value>
            <value>
                <fullName>Direct Drive</fullName>
            </value>
            <value>
                <fullName>Auxiliar Power Unit</fullName>
            </value>
            <value>
                <fullName>Spare Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>