NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTM_Unit_Product__c.field-meta.xml
<CustomField>
    <fullName>CTM_Unit_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTM Unit Product</label>
    <type>Checkbox</type>
</CustomField>