NATTQA-ENV/force-app/main/default/objects/Product2/fields/CTM_Units__c.field-meta.xml
<CustomField>
    <fullName>CTM_Units__c</fullName>
    <label>CTM Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>