NATTQA-ENV/force-app/main/default/objects/Product2/fields/Extended_Basic_Dynamic_Key__c.field-meta.xml
<CustomField>
    <fullName>Extended_Basic_Dynamic_Key__c</fullName>
    <description>NATT for BluEdge configuration</description>
    <label>Extended Basic Dynamic Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>