NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAC_Cat_Cde6_Description__c.field-meta.xml
<CustomField>
    <fullName>NAC_Cat_Cde6_Description__c</fullName>
    <label>Cat Cde6 Description(Categorization)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>