NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAC_Cat_Cde7_Code__c.field-meta.xml
<CustomField>
    <fullName>NAC_Cat_Cde7_Code__c</fullName>
    <label>Cat Cde7 Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>