NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAC_Cat_Code7_Description_Family__c.field-meta.xml
<CustomField>
    <fullName>NAC_Cat_Code7_Description_Family__c</fullName>
    <description>Product family picklist created for NAC business</description>
    <label>Cat Code7 Description (Family)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>