NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAC_Country_of_Origin_COO__c.field-meta.xml
<CustomField>
    <fullName>NAC_Country_of_Origin_COO__c</fullName>
    <label>Country of Origin (COO)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>