NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAC_HTSUS__c.field-meta.xml
<CustomField>
    <fullName>NAC_HTSUS__c</fullName>
    <label>HTSUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>