NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAOCAP_Core_Return_Location__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Core_Return_Location__c</fullName>
    <label>NAOCAP Core Return Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrier/Carlyle Compressor Core Returns</fullName>
            </value>
            <value>
                <fullName>Carrier Transicold Electronics</fullName>
            </value>
            <value>
                <fullName>Weitron Refrigerant Cylinder Returns</fullName>
            </value>
            <value>
                <fullName>Return to Panama parts depot</fullName>
            </value>
            <value>
                <fullName>Return to Chile parts depot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>