NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAOCAP_Not_Orderable_CHI__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Not_Orderable_CHI__c</fullName>
    <formula>if((NATT_Core__c==true || NATT_DirectDelivery__c ==true || NATT_ItemPriceGroup__c ==&apos;123&apos;),true,if((NATT_Sales_Code__c==&apos;S01&apos; || NATT_Sales_Code__c==&apos;SM1&apos; || NATT_Sales_Code__c==&apos;SB1&apos;),if (ISPICKVAL( NAOCAP_Signal_Code_CHI__c, &quot;NLO&quot;),if (ISPICKVAL( NAOCAP_Stocking_Type_UTC_CHI__c,&quot;O&quot;),true,false),ISPICKVAL( NAOCAP_Signal_Code_CHI__c, &quot;S2&quot;) || ISPICKVAL( NAOCAP_Signal_Code_CHI__c, &quot;PRC&quot;) || ISPICKVAL( NAOCAP_Signal_Code_CHI__c, &quot;FIN&quot;) || ISPICKVAL( NAOCAP_Signal_Code_CHI__c, &quot;BY2&quot;)),true))</formula>
    <label>NAOCAP Not Orderable CHI</label>
    <type>Checkbox</type>
</CustomField>