NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAOCAP_Not_Orderable_PAN__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Not_Orderable_PAN__c</fullName>
    <formula>if((NATT_Core__c==true|| NATT_ItemPriceGroup__c ==&apos;123&apos; ||( NATT_Sales_Code__c==&apos;S01&apos; &amp;&amp; NATT_DirectDelivery__c ==true)),true,if((NATT_Sales_Code__c==&apos;S01&apos; || NATT_Sales_Code__c==&apos;SM1&apos; || NATT_Sales_Code__c==&apos;SB1&apos;),if (ISPICKVAL( NAOCAP_Signal_Code_PAN__c, &quot;NLO&quot;),if (ISPICKVAL( NAOCAP_Stocking_Type_UTC_PAN__c,&quot;O&quot;),true,false),ISPICKVAL( NAOCAP_Signal_Code_PAN__c, &quot;S2&quot;) || ISPICKVAL( NAOCAP_Signal_Code_PAN__c, &quot;PRC&quot;) || ISPICKVAL( NAOCAP_Signal_Code_PAN__c, &quot;FIN&quot;) || ISPICKVAL( NAOCAP_Signal_Code_PAN__c, &quot;BY2&quot;)),true))</formula>
    <label>NAOCAP Not Orderable PAN</label>
    <type>Checkbox</type>
</CustomField>