NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAOCAP_Short_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Short_Item_Number__c</fullName>
    <label>NAOCAP Short Item Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>