NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAOCAP_Signal_Code_PAN__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Signal_Code_PAN__c</fullName>
    <label>NAOCAP Signal Code PAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NAOCAP_Signal_Code</valueSetName>
    </valueSet>
</CustomField>