NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAOCAP_Stocking_Type_UTC_ANA__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Stocking_Type_UTC_ANA__c</fullName>
    <label>NAOCAP Stocking Type (UTC) ANA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>