NATTQA-ENV/force-app/main/default/objects/Product2/fields/NAOCAP_Under_Processing__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Under_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAOCAP Under Processing</label>
    <type>Checkbox</type>
</CustomField>