NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_2nd_System_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_2nd_System_Name__c</fullName>
    <description>from lotus notes</description>
    <label>2nd System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>