NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_APU__c.field-meta.xml
<CustomField>
    <fullName>NATT_APU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For product filtering</description>
    <label>APU</label>
    <type>Checkbox</type>
</CustomField>