NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_BluEdge_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Component_Id__c</fullName>
    <description>for looking up prices</description>
    <label>BluEdge Component Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>