NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_BluEdge_DataTable__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_DataTable__c</fullName>
    <label>BluEdge DataTable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_DataTable</valueSetName>
    </valueSet>
</CustomField>