NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_BluEdge_Price_Rollup__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Price_Rollup__c</fullName>
    <description>which line should this roll up to</description>
    <label>BluEdge Price Rollup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Enhance</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>