NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Branch_Plant_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>NATT_Branch_Plant_Warehouse__c</fullName>
    <description>NATT</description>
    <label>Branch Plant/Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TT Units items 3706000000</fullName>
            </value>
            <value>
                <fullName>PPG 3712910000</fullName>
            </value>
            <value>
                <fullName>BNA</fullName>
            </value>
            <value>
                <fullName>ANA</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>TES</fullName>
            </value>
            <value>
                <fullName>CTB01</fullName>
            </value>
            <value>
                <fullName>CTB02</fullName>
            </value>
            <value>
                <fullName>ATL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>