NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Bus__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for filtering NATT</description>
    <label>Bus</label>
    <type>Checkbox</type>
</CustomField>