NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Cat_Cd6_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cat_Cd6_Product_Code__c</fullName>
    <description>For NATT Use</description>
    <label>Cat Cd6 Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A04</fullName>
            </value>
            <value>
                <fullName>A05</fullName>
            </value>
            <value>
                <fullName>A06</fullName>
            </value>
            <value>
                <fullName>A07</fullName>
            </value>
            <value>
                <fullName>A08</fullName>
            </value>
            <value>
                <fullName>A11</fullName>
            </value>
            <value>
                <fullName>A12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>