NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Cat_Cd7_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cat_Cd7_Product_Family__c</fullName>
    <description>NATT use</description>
    <label>Cat Cd7 Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP0</fullName>
            </value>
            <value>
                <fullName>AP1</fullName>
            </value>
            <value>
                <fullName>AP2</fullName>
            </value>
            <value>
                <fullName>H00</fullName>
            </value>
            <value>
                <fullName>I00</fullName>
            </value>
            <value>
                <fullName>I60</fullName>
            </value>
            <value>
                <fullName>I80</fullName>
            </value>
            <value>
                <fullName>R00</fullName>
            </value>
            <value>
                <fullName>R10</fullName>
            </value>
            <value>
                <fullName>S00</fullName>
            </value>
            <value>
                <fullName>S10</fullName>
            </value>
            <value>
                <fullName>S20</fullName>
            </value>
            <value>
                <fullName>T00</fullName>
            </value>
            <value>
                <fullName>T10</fullName>
            </value>
            <value>
                <fullName>T20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>