NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Cat_Cde6_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cat_Cde6_Description__c</fullName>
    <label>Cat Cd6 Product Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>