NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Cat_Code7_Description_Family__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cat_Code7_Description_Family__c</fullName>
    <label>Cat Cd7 Product Family Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>