NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Category__c.field-meta.xml
<CustomField>
    <fullName>NATT_Category__c</fullName>
    <description>Category for TES Products.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>COMPRESSOR</fullName>
            </value>
            <value>
                <fullName>DRIVE</fullName>
            </value>
            <value>
                <fullName>ELECTRICAL</fullName>
            </value>
            <value>
                <fullName>ENGINE</fullName>
            </value>
            <value>
                <fullName>GASKETS</fullName>
            </value>
            <value>
                <fullName>HARDWARE</fullName>
            </value>
            <value>
                <fullName>REFRIGERATION</fullName>
            </value>
            <value>
                <fullName>STRUCTURAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>