NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_CMRA_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Labor_Hours__c</fullName>
    <description>for calculating CMRA</description>
    <label>CMRA Labor Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>