NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Comm_Class__c.field-meta.xml
<CustomField>
    <fullName>NATT_Comm_Class__c</fullName>
    <description>NATT Use</description>
    <label>Comm Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>92</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
            <value>
                <fullName>A00</fullName>
            </value>
            <value>
                <fullName>A10</fullName>
            </value>
            <value>
                <fullName>B01</fullName>
            </value>
            <value>
                <fullName>B02</fullName>
            </value>
            <value>
                <fullName>B11</fullName>
            </value>
            <value>
                <fullName>B12</fullName>
            </value>
            <value>
                <fullName>B13</fullName>
            </value>
            <value>
                <fullName>B14</fullName>
            </value>
            <value>
                <fullName>B15</fullName>
            </value>
            <value>
                <fullName>B16</fullName>
            </value>
            <value>
                <fullName>B17</fullName>
            </value>
            <value>
                <fullName>B21</fullName>
            </value>
            <value>
                <fullName>B22</fullName>
            </value>
            <value>
                <fullName>B50</fullName>
            </value>
            <value>
                <fullName>D01</fullName>
            </value>
            <value>
                <fullName>D02</fullName>
            </value>
            <value>
                <fullName>D03</fullName>
            </value>
            <value>
                <fullName>D04</fullName>
            </value>
            <value>
                <fullName>H00</fullName>
            </value>
            <value>
                <fullName>IB1</fullName>
            </value>
            <value>
                <fullName>IB2</fullName>
            </value>
            <value>
                <fullName>IB3</fullName>
            </value>
            <value>
                <fullName>IB4,</fullName>
            </value>
            <value>
                <fullName>IB5</fullName>
            </value>
            <value>
                <fullName>IB6</fullName>
            </value>
            <value>
                <fullName>IS1</fullName>
            </value>
            <value>
                <fullName>IS2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>