NATTQA-ENV/force-app/main/default/objects/Product2/fields/NATT_Contains_BluEdge_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contains_BluEdge_Price__c</fullName>
    <description>put the total bluedge price in this field on the quote line for integration</description>
    <label>Contains BluEdge Price</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Enhance</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>